--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1>My Gallery</h1>
           <div class="gallery">
             <figure class="card">
-              <img src="/images/image1.jpg" alt="">
+              <img src="./images/image1.jpg" alt="">
               <figcaption>image1</figcaption>
           </figure>
           <figure class="card">
